<resources>

    <string name="app_name">Google Location Services</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">Google Location Services Demo team Ragnarok</string>
    <string name="main_flp_title">Fused Location Provider</string>
    <string name="main_geo_title">Geofencing API</string>
    <string name="main_pla_title">Places API</string>
    <string name="main_acr_title">Activity Recognition</string>

    <!-- ARD Strings -->

    <string name="ARD_app_name">Activity Recognition</string>
    <string name="ARD_action_settings">Settings</string>
    <string name="ARD_most_probable">Most probable activity:</string>
    <string name="ARD_in_vehicle">In a vehicle</string>
    <string name="ARD_on_bicycle">On bicycle</string>
    <string name="ARD_on_foot">On foot</string>
    <string name="ARD_running">Running</string>
    <string name="ARD_still">Still</string>
    <string name="ARD_tilting">Tilting</string>
    <string name="ARD_walking">Walking</string>
    <string name="ARD_unknown">Unknown</string>
    <string name="ARD_unknown_activity">Unknown type of activity</string>
    <string name="ARD_confidence">confidence level:</string>
    <string name="ARD_wait_data">Waiting for data</string>
    <string name="ARD_detailed_activity_list">Detailed activity list:</string>
    <string name="ARD_log">Most probable activities log:</string>
    <string name="ARD_interval">Measurement interval:</string>

    <!-- GEO Strings -->
    
    <string name="GEO_latitude">retrieve latitude</string>
    <string name="GEO_longitude">retrieve longitude</string>
    <string name="GEO_retrieveLoc">RETRIEVE LOCATION</string>
    <string name="GEO_perimeter">geofence\'s perimeter (meters)</string>
    <string name="GEO_duration">geofence\'s expiration (minutes)</string>
    <string name="GEO_dwelling">geofence\'s dwelling period (minutes)</string>
    <string name="GEO_addGeofence">ADD GEOFENCE</string>
    <string name="GEO_notAPI">No GoogleAPI connection available!</string>
    <string name="GEO_notLocation">No location has been retrieved yet!</string>
    <string name="GEO_added">Geofence added successfully!</string>
    <string name="GEO_removeGeofence">REMOVE GEOFENCE</string>
    <string name="GEO_removed">Geofence monitoring has been stopped!</string>
    <string name="GEO_alert_enter">ENTERED</string>
    <string name="GEO_alert_exit">EXITED</string>
    <string name="GEO_alert_dwell">DWELLING</string>

    <!-- FLP Strings -->

    <string name="FLP_title_activity">Fused Location Provider</string>
    <string name="FLP_last_location">Last location known by the system</string>
    <string name="FLP_request_location_l">Resquest Location by Listeners</string>
    <string name="FLP_request_location_p">Resquest Location by PendingIntent</string>
    <string name="FLP_activity_last_location">FLP Last Location</string>
    <string name="FLP_latitude_label">Latitude</string>
    <string name="FLP_longitude_label">Longitude</string>
    <string name="FLP_timeupdate_label">Timestamp</string>
    <string name="FLP_no_location_detected">No location detected, please check you settings</string>
    <string name="FLP_introduction">The Fused Location Provider intelligently manages the underlying location technology and gives you the best location according to your needs.</string>
    <string name="FLP_last_location_introduction">Implementation of getLastLocation(GoogleApiClient client). Returns the best most recent location currently available.</string>
    <string name="FLP_title_activity_flpactivity_location_listeners">FLP Location Listeners</string>
    <string name="FLP_location_listeners_introduction">Implementation of LocationListeners. Used for receiving notifications from the LocationManager when the location has changed.</string>
    <string name="FLP_pending_intent_introduction">Implementation of PendingIntent. Used for receiving notifications from the LocationManager when the location has changed and the application is in background.</string>
    <string name="FLP_title_activity_flpactivity_location_pending_intent">FLP Pending Intent</string>
    <string name="FLP_intent_service_started" translatable="false">Pending Intent started successfully</string>
    <string name="title_activity_places_main">Places API</string>

    <!-- PLA Strings -->

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="PLA_title">Google Place API</string>
    <string name="PLA_intro">Here you can try three main functionality offered by Google Places API through PlacePicker UI Widget, GeoDataApi addPlace and PlaceDetectionApi getDeviceAtPlace()</string>
    <string name="PLA_pickerButton">Place Picker</string>
    <string name="PLA_reportPlaceButton">Report Place</string>
    <string name="PLA_addPlaceButton">Add Place</string>
    <string name="title_activity_add_place">Add Place Function</string>
    <string name="title_activity_report_place">Report Place Function</string>
    <string name="PLA_newPlaceName">New Place Name</string>
    <string name="PLA_newPlaceAddress">New Place Address</string>
    <string name="PLA_coordPicker">Pick Coordinates</string>
    <string name="PLA_newLatitude">Latitude</string>
    <string name="PLA_newLongitude">Longitude</string>
    <string name="PLA_addButton">Add New Place</string>
    <string name="GEO_alert_unknown">UNKNOWN</string>
    <string name="PLA_emptyNamePlace">Name Place</string>
    <string name="PLA_emptyAddrPlace">Address Place</string>
    <string name="PLA_emptyAttrPlace">Place Attributes</string>
    <string name="PLA_emptyLatitude">Place Latitude</string>
    <string name="PLA_emptyLongitude">Place Longitude</string>


</resources>
