<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="it.mobileprogramming.ragnarok.googleplayservices.ReportPlaceActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PLA_emptyNamePlace"
            android:gravity="center"
            android:id="@+id/nameTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PLA_emptyAddrPlace"
            android:paddingTop="25dp"
            android:gravity="center"
            android:id="@+id/addressTextView"
            android:layout_below="@+id/nameTextView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PLA_emptyAttrPlace"
            android:paddingTop="25dp"
            android:layout_below="@+id/addressTextView"
            android:gravity="center"
            android:id="@+id/attrTextView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PLA_emptyLatitude"
            style="@style/FLPTextViewField"
            android:id="@+id/latTextView"
            android:layout_below="@+id/latitudeText"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/PLA_emptyLongitude"
            style="@style/FLPTextViewField"
            android:id="@+id/lngTextView"
            android:layout_below="@+id/longitudeText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/FLP_latitude_label"
            android:id="@+id/latitudeText"
            style="@style/FLPTextView"
            android:layout_below="@+id/attrTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/FLP_longitude_label"
            style="@style/FLPTextView"
            android:id="@+id/longitudeText"
            android:layout_below="@+id/latTextView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</ScrollView>
