<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:text="@string/FLP_introduction"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                style="@style/GPSMainButton"
                android:text="@string/FLP_last_location"
                android:id="@+id/buttonLastLocation"
                android:layout_gravity="center_horizontal" />

            <Button
                style="@style/GPSMainButton"
                android:text="@string/FLP_request_location_l"
                android:id="@+id/buttonListener"
                android:layout_gravity="center_horizontal" />

            <Button
                style="@style/GPSMainButton"
                android:text="@string/FLP_request_location_p"
                android:id="@+id/buttonPendingIntent"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
