<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/main_title"
                    android:id="@+id/textView"
                    android:gravity="center_vertical" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:background="@mipmap/gps_logo" />

            </LinearLayout>

            <Button
                style="@style/GPSMainButton"
                android:text="@string/main_flp_title"
                android:id="@+id/buttonFLP"
                android:layout_gravity="center_horizontal" />

            <Button
                style="@style/GPSMainButton"
                android:text="@string/main_geo_title"
                android:id="@+id/buttonGEO"
                android:layout_gravity="center_horizontal" />

            <Button
                style="@style/GPSMainButton"
                android:text="@string/main_pla_title"
                android:id="@+id/buttonPLA"
                android:layout_gravity="center_horizontal" />

            <Button
                style="@style/GPSMainButton"
                android:text="@string/main_acr_title"
                android:id="@+id/buttonACR"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
